tests/golden/type_errors/array_find_index_non_array.cd
findIndex(1, fun (value) { return true; });
