tests/golden/type_errors/array_find_index_non_array.err
Type error at 1:42: findIndex expects array as first argument, got number
  findIndex(1, fun (value) { return true; });
                                           ^
